--- a/app/src/main/res/layout/item_reservation_types.xml
+++ b/app/src/main/res/layout/item_reservation_types.xml
@@ -111,6 +111,7 @@
             app:layout_constraintTop_toTopOf="@id/shortCode">
 
             <ImageView
+                android:id="@+id/edit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
