--- a/app/src/main/res/layout/dialog_create_payment_type.xml
+++ b/app/src/main/res/layout/dialog_create_payment_type.xml
@@ -54,7 +54,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/propertyChainText"
+                        android:id="@+id/paymentMethodName"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/roboto"
@@ -79,6 +79,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/shortCode"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/roboto"
@@ -94,7 +95,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="20dp"
-                    android:hint="Payment Method Name"
+                    android:hint="Received To"
                     app:endIconMode="clear_text"
                     app:endIconTint="@color/black"
                     app:layout_constraintEnd_toStartOf="@id/cardImg"
@@ -102,6 +103,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/receivedTo"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/roboto"
