--- a/app/src/main/res/layout/fragment_reservation_type.xml
+++ b/app/src/main/res/layout/fragment_reservation_type.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".dashboard.configuration.reservation.ReservationTypeFragment">
+    tools:context=".dashboard.configuration.guestsAndReservation.reservationType.ReservationTypeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
