--- a/app/src/main/res/layout/item_holidays.xml
+++ b/app/src/main/res/layout/item_holidays.xml
@@ -132,18 +132,21 @@
             app:layout_constraintTop_toTopOf="@id/shortCode">
 
             <ImageView
+                android:id="@+id/edit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/svg_pen" />
 
             <ImageView
+                android:id="@+id/delete"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/svg_delete_lite" />
 
             <ImageView
+                android:id="@+id/info"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
