--- a/app/src/main/res/layout/fragment_holidays.xml
+++ b/app/src/main/res/layout/fragment_holidays.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".dashboard.configuration.others.HolidaysFragment">
+    tools:context=".dashboard.configuration.others.holiday.HolidaysFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
