--- a/app/src/main/res/layout/dialog_create_inclusion.xml
+++ b/app/src/main/res/layout/dialog_create_inclusion.xml
@@ -60,10 +60,10 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/inclusionName"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
-                            android:hint="Transportation Mode"
                             android:inputType="text"
                             android:textColor="@color/secondary"
                             android:textColorHint="@drawable/hint_selector" />
@@ -85,6 +85,7 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/inclusionType"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
@@ -118,10 +119,10 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/shortCode"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
-                            android:hint="Transportation Mode"
                             android:inputType="text"
                             android:textColor="@color/secondary"
                             android:textColorHint="@drawable/hint_selector" />
@@ -142,10 +143,10 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/charge"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
-                            android:hint="Transportation Mode"
                             android:inputType="text"
                             android:textColor="@color/secondary"
                             android:textColorHint="@drawable/hint_selector" />
@@ -175,10 +176,10 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/chargeRule"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
-                            android:hint="Transportation Mode"
                             android:inputType="text"
                             android:textColor="@color/secondary"
                             android:textColorHint="@drawable/hint_selector" />
@@ -199,10 +200,10 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/postingRule"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
-                            android:hint="Transportation Mode"
                             android:inputType="text"
                             android:textColor="@color/secondary"
                             android:textColorHint="@drawable/hint_selector" />
