--- a/app/src/main/res/drawable/mobile_corner_left_black_background.xml
+++ b/app/src/main/res/drawable/mobile_corner_left_black_background.xml
@@ -2,8 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <solid android:color="@color/black"/>
-    <corners android:topLeftRadius="12dp"
-        android:bottomLeftRadius="12dp"/>
+    <corners
+        android:topLeftRadius="12dp"
+        android:bottomLeftRadius="12dp"
+        android:topRightRadius="12dp"
+        android:bottomRightRadius="12dp"
+        />
 
 
 </shape>
