--- a/app/src/main/res/layout/activity_create_new_password_mobile.xml
+++ b/app/src/main/res/layout/activity_create_new_password_mobile.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".onboarding.authentication.ForgetPasswordScreen">
+    tools:context=".onboarding.authentication.CreateNewPasswordActivity">
+
+
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/frame2"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/secondary"
-                android:text="@string/reset_password"
+                android:text="Create new password"
                 android:textSize="@dimen/H2"
                 android:fontFamily="@font/roboto_bold"
                 android:layout_marginTop="21dp"
@@ -50,9 +51,8 @@
                 android:id="@+id/title3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Use your registered e-mail address to reset your \npassword."
+                android:text="Use your registered e-mail address to reset your password."
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="21dp"
                 android:fontFamily="@font/roboto"
                 android:textFontWeight="400"
                 android:textColor="#828282"
@@ -60,36 +60,80 @@
                 app:layout_constraintTop_toBottomOf="@id/forgottitle"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/forgot_layout"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:hint="Email address"
-                app:boxStrokeColor="@color/black"
-                android:layout_marginTop="20dp"
-                app:boxStrokeWidthFocused="2dp"
-                app:boxCornerRadiusTopStart="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:endIconMode="clear_text"
-                app:endIconTint="@color/black"
+                android:orientation="vertical"
+                android:layout_marginEnd="21dp"
                 app:layout_constraintStart_toStartOf="@id/title3"
                 app:layout_constraintEnd_toEndOf="@id/title3"
                 app:layout_constraintTop_toBottomOf="@+id/title3">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/forgot_text"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/createNewPasswordLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fontFamily="@font/roboto"
-                    android:inputType="text"
-                    android:textSize="@dimen/H5"
-                    android:textColorHint="@color/secondary"
-                    android:textColor="@color/secondary" />
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:hint="Create new password"
+                    app:startIconDrawable="@drawable/svg_key"
+                    android:textColorHint="@color/lightBlack"
+                    app:boxStrokeColor="@color/black"
+                    app:hintTextColor="@color/secondary"
+                    android:layout_marginTop="20dp"
+                    app:boxStrokeWidthFocused="2dp"
+                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:endIconMode="password_toggle"
+                    app:endIconTint="@color/black">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/createNewPasswordText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/roboto"
+                        android:textSize="@dimen/H5"
+                        android:inputType="text"
+                        android:textColorHint="@color/secondary"
+                        android:textColor="@color/secondary" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/confirmNewPasswordLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:hint="Confirm new password"
+                    app:startIconDrawable="@drawable/svg_keys"
+                    android:textColorHint="@color/lightBlack"
+                    app:boxStrokeColor="@color/black"
+                    app:hintTextColor="@color/secondary"
+                    android:layout_marginTop="10dp"
+                    app:boxStrokeWidthFocused="2dp"
+                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:endIconMode="password_toggle"
+                    app:endIconTint="@color/black">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/confirmNewPasswordText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/roboto"
+                        android:inputType="text"
+                        android:textSize="@dimen/H5"
+                        android:textColorHint="@color/secondary"
+                        android:textColor="@color/secondary" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+            </LinearLayout>
+
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/resetCard"
@@ -107,7 +151,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/reset_password"
+                    android:text="Reset Password"
                     android:layout_gravity="center"
                     android:fontFamily="@font/roboto_bold"
                     android:textSize="@dimen/H4"
@@ -118,5 +162,6 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
