--- a/app/src/main/res/layout/activity_final_onboarding_screen_mobile.xml
+++ b/app/src/main/res/layout/activity_final_onboarding_screen_mobile.xml
@@ -8,12 +8,12 @@
         android:id="@+id/congratulationLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="visible">
 
     <ImageView
         android:id="@+id/coverImg"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="340dp"
         android:layout_marginVertical="20dp"
         android:src="@drawable/wait_for_service"
         android:transitionName="onBoardingImg"
@@ -25,7 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/coverImg"
-        android:layout_marginHorizontal="21dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginHorizontal="16dp"
         android:orientation="vertical">
 
         <TextView
@@ -44,7 +45,7 @@
             android:fontFamily="@font/roboto"
             android:text="Congratulations!\nYou have successfully registered your Hotel Chain [chain_Name] with us.\n\nWe just need to check a few things first, we will let you know when your one stop hotel solution is ready to go."
             android:textColor="@color/black"
-            android:textSize="@dimen/H4" />
+            android:textSize="@dimen/H5" />
     </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -52,7 +53,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible"
+        android:visibility="gone"
         android:id="@+id/dash_layout">
 
     <ImageView
@@ -72,7 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="19dp"
         app:layout_constraintTop_toBottomOf="@id/dash_img"
-        android:layout_marginHorizontal="21dp"
+        android:layout_marginHorizontal="16dp"
         android:orientation="vertical">
 
         <TextView
@@ -90,7 +91,7 @@
             android:fontFamily="@font/roboto"
             android:text="Your account has been verified and activated.\n\nNow you can manage all your properties, guest and a whole lot of other things in just one place."
             android:textColor="@color/black"
-            android:textSize="@dimen/H4" />
+            android:textSize="@dimen/H5" />
     </LinearLayout>
 
         <androidx.cardview.widget.CardView
