--- a/app/src/main/res/layout/activity_login_mobile_screen.xml
+++ b/app/src/main/res/layout/activity_login_mobile_screen.xml
@@ -10,7 +10,6 @@
         android:id="@+id/logo"
         android:layout_width="270dp"
         android:layout_height="130dp"
-        android:layout_marginTop="12dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,7 +18,7 @@
     <LinearLayout
         android:id="@+id/loginTitle"
         android:layout_width="wrap_content"
-        android:layout_height="42dp"
+        android:layout_height="40dp"
         android:orientation="horizontal"
         android:transitionName="login_board"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +26,7 @@
         app:layout_constraintTop_toBottomOf="@id/logo">
 
         <TextView
-            android:id="@+id/openLoginScreen"
+            android:id="@+id/openSignUpScreen"
             android:layout_width="120dp"
             android:layout_height="match_parent"
             android:text="@string/new_here_sign_up"
@@ -35,7 +34,7 @@
             android:gravity="center"
             android:textColor="@color/black"
             android:background="@drawable/mobile_corner_left_grey_background"
-            android:textSize="@dimen/H5"
+            android:textSize="@dimen/H6"
             android:fontFamily="@font/roboto"
             android:layout_marginEnd="-12dp"
             android:textFontWeight="500"
@@ -49,7 +48,7 @@
 <!--            android:background="@color/black"/>-->
 
         <TextView
-            android:id="@+id/openSignUpScreen"
+            android:id="@+id/openLoginScreen"
             android:layout_width="120dp"
             android:layout_height="match_parent"
             android:text="@string/log_in"
@@ -57,22 +56,33 @@
             android:background="@drawable/mobile_corner_right_black_background"
             android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="@dimen/H4"
+            android:textSize="@dimen/H5"
             android:fontFamily="@font/roboto_bold"
             android:textFontWeight="500"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </LinearLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/loginTitle"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+
         <FrameLayout
-            android:id="@+id/fl_container"
+            android:id="@+id/authFragContainerMobile"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="9dp"
-            app:layout_constraintTop_toBottomOf="@id/loginTitle"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_height="wrap_content"
+            />
+
+    </androidx.core.widget.NestedScrollView>
+
+
     
     
     
