--- a/app/src/main/res/layout/activity_third_chain_onboarding_screen_mobile.xml
+++ b/app/src/main/res/layout/activity_third_chain_onboarding_screen_mobile.xml
@@ -74,6 +74,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:fontFamily="@font/roboto"
+                                android:textSize="@dimen/H5"
                                 android:inputType="text"
                                 android:textColorHint="@color/secondary"
                                 android:textColor="@color/secondary" />
@@ -99,9 +100,10 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Star Category"
-                                    android:textSize="16sp"
+                                    android:textSize="@dimen/H5"
                                     android:layout_marginStart="20dp"
                                     android:textColor="@color/lightBlack"
+                                    android:textEditSideNoPasteWindowLayout="@dimen/H5"
                                     android:fontFamily="@font/roboto"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintBottom_toBottomOf="parent"
@@ -142,7 +144,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Rooms in Properties"
-                                    android:textSize="16sp"
+                                    android:textSize="@dimen/H5"
                                     android:textColor="@color/lightBlack"
                                     android:fontFamily="@font/roboto"
                                     android:layout_marginStart="16dp"
@@ -155,14 +157,15 @@
                                     android:layout_height="wrap_content"
                                     android:orientation="horizontal"
                                     android:layout_marginEnd="10dp"
+                                    android:gravity="center_vertical"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintTop_toTopOf="parent">
 
                                     <ImageView
                                         android:id="@+id/removeRooms"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
+                                        android:layout_width="19dp"
+                                        android:layout_height="19dp"
                                         android:src="@drawable/svg_remove"/>
 
                                     <EditText
@@ -181,8 +184,8 @@
 
                                     <ImageView
                                         android:id="@+id/addRooms"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
+                                        android:layout_width="19dp"
+                                        android:layout_height="19dp"
                                         android:src="@drawable/svg_add"/>
 
                                 </LinearLayout>
@@ -205,6 +208,7 @@
                                 android:id="@+id/TaxNameText"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
+                                android:textSize="@dimen/H5"
                                 android:fontFamily="@font/roboto"
                                 android:inputType="text"
                                 android:textColorHint="@color/secondary"
@@ -231,7 +235,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Rate %"
-                                    android:textSize="16sp"
+                                    android:textSize="@dimen/H5"
                                     android:textColor="@color/lightBlack"
                                     android:fontFamily="@font/roboto"
                                     android:layout_marginStart="16dp"
@@ -251,8 +255,8 @@
 
                                     <ImageView
                                         android:id="@+id/removeRate"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
+                                        android:layout_width="19dp"
+                                        android:layout_height="19dp"
                                         android:src="@drawable/svg_remove"/>
 
                                     <EditText
@@ -271,8 +275,8 @@
 
                                     <ImageView
                                         android:id="@+id/addRate"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
+                                        android:layout_width="19dp"
+                                        android:layout_height="19dp"
                                         android:src="@drawable/svg_add"/>
 
                                 </LinearLayout>
@@ -321,14 +325,15 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_SingleNext"
-                    android:layout_width="170dp"
-                    android:layout_height="@dimen/button_height"
+                    android:layout_width="0dp"
+                    android:layout_height="42dp"
                     style="@style/ButtonCardView"
-                    android:layout_marginBottom="40dp"
-                    android:layout_marginEnd="60dp"
+                    android:layout_marginBottom="34dp"
+                    android:layout_marginHorizontal="21dp"
                     android:transitionName="Btn"
                     app:cardBackgroundColor="@color/black"
                     app:layout_constraintVertical_bias="1"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/single_layout"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@id/single_layout">
@@ -336,7 +341,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/next"
+                        android:text="Submit"
                         android:textColor="@color/white"
                         android:fontFamily="@font/roboto_bold"
                         android:layout_gravity="center"
