--- a/app/src/main/res/layout/fragment_login_mobile.xml
+++ b/app/src/main/res/layout/fragment_login_mobile.xml
@@ -38,6 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="@font/roboto"
+            android:textSize="@dimen/H5"
             android:inputType="text"
             android:textColorHint="@color/secondary"
             android:textColor="@color/secondary" />
@@ -63,6 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColorHint="@color/secondary"
+            android:textSize="@dimen/H5"
             android:fontFamily="@font/roboto"
             android:inputType="text"
             android:textColor="@color/secondary" />
@@ -88,6 +90,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="@font/roboto"
+            android:textSize="@dimen/H5"
             android:inputType="textPassword"
             android:textColorHint="@color/secondary"
             android:textColor="@color/secondary" />
