--- a/app/src/main/res/layout/fragment_sign_up_mobile.xml
+++ b/app/src/main/res/layout/fragment_sign_up_mobile.xml
@@ -5,11 +5,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/continueWithR"
         android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_marginTop="25dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="9dp"
         app:cardCornerRadius="10dp"
         app:strokeWidth="2dp"
         app:cardBackgroundColor="@color/white"
@@ -24,8 +35,8 @@
             android:text="@string/continue_with_r_own"
             android:layout_gravity="center"
             android:fontFamily="@font/roboto_medium"
-            android:textSize="17dp"
-            android:layout_marginHorizontal="40dp"
+            android:textSize="@dimen/H5"
+            android:layout_marginHorizontal="32dp"
             android:textColor="@color/secondary" />
 
     </com.google.android.material.card.MaterialCardView>
@@ -48,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@id/continueWithR"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="9dp"
         android:text="or"
         android:textSize="15dp" />
 
@@ -71,10 +82,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="Fill in your details to begin"
-        android:textSize="@dimen/H4"
+        android:textSize="@dimen/H5"
         android:fontFamily="@font/roboto_medium"
         android:textColor="@color/black"
-        android:layout_marginTop="7dp"/>
+        android:layout_marginTop="6dp"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/AccontLayout"
@@ -83,16 +94,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txt_fill"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="9dp"
         android:visibility="visible">
-
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/c1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintStart_toStartOf="parent">
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/firstNameLayout"
             android:layout_width="0dp"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             style="@style/TextInputLayoutStyle"
             android:hint="First Name"
-            android:layout_marginStart="20dp"
             app:endIconMode="clear_text"
             app:endIconTint="@color/black"
             app:layout_constraintEnd_toStartOf="@id/lastNameLayout"
@@ -104,6 +122,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/roboto"
+                android:textSize="@dimen/H5"
                 android:inputType="text"
                 android:textColorHint="@color/secondary"
                 android:textColor="@color/secondary" />
@@ -113,10 +132,9 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lastNameLayout"
             android:layout_width="0dp"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             style="@style/TextInputLayoutStyle"
             android:hint="Last Name"
-            android:layout_marginEnd="20dp"
             android:layout_marginStart="10dp"
             app:endIconMode="clear_text"
             app:endIconTint="@color/black"
@@ -129,27 +147,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/roboto"
+                android:textSize="@dimen/H5"
                 android:inputType="text"
                 android:textColorHint="@color/secondary"
                 android:textColor="@color/secondary" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/designationLayout"
             android:layout_width="0dp"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             style="@style/ClickableTextInputLayoutStyle"
             android:hint="Designation"
             android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="@id/firstNameLayout"
-            app:layout_constraintEnd_toEndOf="@id/lastNameLayout"
-            app:layout_constraintTop_toBottomOf="@id/firstNameLayout">
+            app:layout_constraintStart_toStartOf="@id/c1"
+            app:layout_constraintEnd_toEndOf="@id/c1"
+            app:layout_constraintTop_toBottomOf="@id/c1">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/designationText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:textSize="@dimen/H5"
                 android:fontFamily="@font/roboto"
                 android:inputType="text"
                 android:textColorHint="@color/secondary"
@@ -163,21 +185,22 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/phoneLayout"
             android:layout_width="0dp"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             style="@style/TextInputLayoutStyle"
             android:hint="Phone Number"
             app:placeholderText="+91 0000000000"
             android:layout_marginTop="10dp"
             app:endIconMode="clear_text"
             app:endIconTint="@color/black"
-            app:layout_constraintEnd_toEndOf="@id/lastNameLayout"
+            app:layout_constraintEnd_toEndOf="@id/c1"
             app:layout_constraintTop_toBottomOf="@id/designationLayout"
-            app:layout_constraintStart_toStartOf="@id/firstNameLayout">
+            app:layout_constraintStart_toStartOf="@id/c1">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/phoneText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:textSize="@dimen/H5"
                 android:fontFamily="@font/roboto"
                 android:inputType="number"
                 android:textColorHint="@color/secondary"
@@ -188,21 +211,22 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/emailLayout"
             android:layout_width="0dp"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             style="@style/TextInputLayoutStyle"
             android:hint="Email"
             app:placeholderText="abc@xyz.com"
             android:layout_marginTop="10dp"
             app:endIconMode="clear_text"
             app:endIconTint="@color/black"
-            app:layout_constraintStart_toStartOf="@id/firstNameLayout"
-            app:layout_constraintEnd_toEndOf="@id/lastNameLayout"
+            app:layout_constraintStart_toStartOf="@id/c1"
+            app:layout_constraintEnd_toEndOf="@id/c1"
             app:layout_constraintTop_toBottomOf="@id/phoneLayout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/emailText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:textSize="@dimen/H5"
                 android:fontFamily="@font/roboto"
                 android:inputType="text"
                 android:textColorHint="@color/secondary"
@@ -213,20 +237,21 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/passwordLayout"
             android:layout_width="0dp"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             style="@style/TextInputLayoutStyle"
             android:hint="Password"
             android:layout_marginTop="10dp"
             app:endIconMode="password_toggle"
             app:endIconTint="@color/black"
-            app:layout_constraintEnd_toEndOf="@id/lastNameLayout"
-            app:layout_constraintStart_toStartOf="@id/firstNameLayout"
+            app:layout_constraintEnd_toEndOf="@id/c1"
+            app:layout_constraintStart_toStartOf="@id/c1"
             app:layout_constraintTop_toBottomOf="@id/emailLayout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/passwordText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:textSize="@dimen/H5"
                 android:fontFamily="@font/roboto"
                 android:inputType="textPassword"
                 android:textColorHint="@color/secondary"
@@ -235,8 +260,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_createAccount"
@@ -267,17 +290,20 @@
         android:layout_height="wrap_content"
         android:text="@string/terms_of_services"
         android:layout_marginHorizontal="50dp"
-        android:textSize="@dimen/H5"
+        android:textSize="@dimen/H6"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="9dp"
         app:layout_constraintEnd_toEndOf="@id/AccontLayout"
         app:layout_constraintTop_toBottomOf="@id/card_createAccount"
         app:layout_constraintStart_toStartOf="@id/AccontLayout"/>
 
 
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+    </ScrollView>
 
 
 
