--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -10,8 +10,6 @@
     android:background="@color/secondaryBackground"
     tools:context=".dashboard.channelManager.DashboardFragment.DashBoardFragment">
 
-
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -384,14 +382,141 @@
                            app:cardBackgroundColor="@color/primaryBackground"
                            app:strokeWidth="0.5dp"
                            android:layout_marginEnd="15dp"
-                           />
+                           >
+
+                           <androidx.constraintlayout.widget.ConstraintLayout
+                               android:layout_width="match_parent"
+                               android:layout_height="match_parent">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:layout_constraintBottom_toTopOf="@+id/adr_text"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                android:text="ADR"
+                                android:textColor="@color/textColor"
+                                android:textSize="@dimen/H5"
+                                />
+
+                               <TextView
+                                   android:id="@+id/adr_text"
+                                   android:layout_width="wrap_content"
+                                   android:layout_height="wrap_content"
+                                    app:layout_constraintTop_toTopOf="parent"
+                                   app:layout_constraintBottom_toBottomOf="parent"
+                                   app:layout_constraintStart_toStartOf="parent"
+                                   app:layout_constraintEnd_toEndOf="parent"
+                                   android:text="₹ 24,780.00"
+                                   android:textSize="@dimen/H3"
+                                   android:textColor="@color/textColor"
+                                   android:fontFamily="@font/roboto_bold"
+                                   android:textFontWeight="700"
+                                   />
+                               
+                               <LinearLayout
+                                   android:layout_width="wrap_content"
+                                   android:layout_height="wrap_content"
+                                   app:layout_constraintTop_toBottomOf="@+id/adr_text"
+                                   app:layout_constraintStart_toStartOf="parent"
+                                   app:layout_constraintEnd_toEndOf="parent"
+                                   android:orientation="horizontal"
+                                   android:gravity="center"
+                                   >
+
+                                   <ImageView
+                                       android:layout_width="20dp"
+                                       android:layout_height="20dp"
+                                       android:src="@drawable/increase_svg"
+                                       android:layout_marginEnd="3dp"
+                                       />
+                                   
+                                   <TextView
+                                       android:layout_width="wrap_content"
+                                       android:layout_height="wrap_content"
+                                       android:text="8%"
+                                       android:textSize="@dimen/H4"
+                                       android:textColor="@color/textColor"
+                                       android:fontFamily="@font/roboto_medium"
+                                       />
+                                   
+                               </LinearLayout>
+
+
+                           </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+                       </com.google.android.material.card.MaterialCardView>
                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:cardBackgroundColor="@color/primaryBackground"
                            app:strokeWidth="0.5dp"
-                           />
+                           >
+                           <androidx.constraintlayout.widget.ConstraintLayout
+                               android:layout_width="match_parent"
+                               android:layout_height="match_parent">
+
+                               <TextView
+                                   android:layout_width="wrap_content"
+                                   android:layout_height="wrap_content"
+                                   app:layout_constraintBottom_toTopOf="@+id/RavPar_text"
+                                   app:layout_constraintStart_toStartOf="parent"
+                                   app:layout_constraintEnd_toEndOf="parent"
+                                   android:text="RavPar"
+                                   android:textColor="@color/textColor"
+                                   android:textSize="@dimen/H5"
+                                   />
+
+                               <TextView
+                                   android:id="@+id/RavPar_text"
+                                   android:layout_width="wrap_content"
+                                   android:layout_height="wrap_content"
+                                   app:layout_constraintTop_toTopOf="parent"
+                                   app:layout_constraintBottom_toBottomOf="parent"
+                                   app:layout_constraintStart_toStartOf="parent"
+                                   app:layout_constraintEnd_toEndOf="parent"
+                                   android:text="₹ 24,780.00"
+                                   android:textSize="@dimen/H3"
+                                   android:textColor="@color/textColor"
+                                   android:fontFamily="@font/roboto_bold"
+                                   android:textFontWeight="700"
+                                   />
+
+                               <LinearLayout
+                                   android:layout_width="wrap_content"
+                                   android:layout_height="wrap_content"
+                                   app:layout_constraintTop_toBottomOf="@+id/RavPar_text"
+                                   app:layout_constraintStart_toStartOf="parent"
+                                   app:layout_constraintEnd_toEndOf="parent"
+                                   android:orientation="horizontal"
+                                   android:gravity="center"
+                                   >
+
+                                   <ImageView
+                                       android:layout_width="20dp"
+                                       android:layout_height="20dp"
+                                       android:src="@drawable/increase_svg"
+                                       android:layout_marginEnd="3dp"
+                                       />
+
+                                   <TextView
+                                       android:layout_width="wrap_content"
+                                       android:layout_height="wrap_content"
+                                       android:text="8%"
+                                       android:textSize="@dimen/H4"
+                                       android:textColor="@color/textColor"
+                                       android:fontFamily="@font/roboto_medium"
+                                       />
+
+                               </LinearLayout>
+
+
+                           </androidx.constraintlayout.widget.ConstraintLayout>
+
+                       </com.google.android.material.card.MaterialCardView>
 
                    </LinearLayout>
 
@@ -404,7 +529,7 @@
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="@color/secondaryBackground"
-               android:layout_marginBottom="20dp"
+               android:layout_marginBottom="12dp"
                app:strokeWidth="0dp"
                android:backgroundTint="@color/secondaryBackground"
                android:weightSum="2"
@@ -422,6 +547,18 @@
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
+
+                       <TextView
+                           style="@style/GhraphsHeading"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           app:layout_constraintTop_toTopOf="parent"
+                           app:layout_constraintStart_toStartOf="parent"
+                           android:layout_marginTop="12dp"
+                           android:layout_marginStart="12dp"
+                           android:text="Rooms Overview"
+                           />
+
                        <com.github.mikephil.charting.charts.PieChart
                            android:id="@+id/pie_chart"
                            android:layout_width="match_parent"
@@ -452,6 +589,17 @@
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
 
+                       <TextView
+                           style="@style/GhraphsHeading"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           app:layout_constraintTop_toTopOf="parent"
+                           app:layout_constraintStart_toStartOf="parent"
+                           android:layout_marginTop="12dp"
+                           android:layout_marginStart="12dp"
+                           android:text="Revenue"
+                           />
+
                        <com.github.mikephil.charting.charts.BarChart
                            android:id="@+id/barchart"
                            android:layout_width="0dp"
@@ -475,7 +623,7 @@
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="@color/secondaryBackground"
-               android:layout_marginBottom="20dp"
+               android:layout_marginBottom="12dp"
                app:strokeWidth="0dp"
                android:backgroundTint="@color/secondaryBackground"
                android:weightSum="2"
@@ -493,11 +641,24 @@
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
-                       <com.github.mikephil.charting.charts.BarChart
+
+                       <TextView
+                           style="@style/GhraphsHeading"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           app:layout_constraintTop_toTopOf="parent"
+                           app:layout_constraintStart_toStartOf="parent"
+                           android:layout_marginTop="12dp"
+                           android:layout_marginStart="12dp"
+                           android:text="Revenue"
+                           />
+
+                       <com.github.mikephil.charting.charts.LineChart
                            android:id="@+id/lineChart"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
-                           android:layout_marginTop="50dp"
+                           android:layout_marginTop="60dp"
+                           android:layout_marginBottom="30dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
@@ -523,8 +684,19 @@
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
 
+                       <TextView
+                           style="@style/GhraphsHeading"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           app:layout_constraintTop_toTopOf="parent"
+                           app:layout_constraintStart_toStartOf="parent"
+                           android:layout_marginTop="12dp"
+                           android:layout_marginStart="12dp"
+                           android:text="Booking Statistics"
+                           />
+
                        <com.github.mikephil.charting.charts.BarChart
-                           android:id="@+id/barchart"
+                           android:id="@+id/stack_bar"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginTop="50dp"
